# Estudos_Jornada

./: pyproject.toml
Espaço_Estudos/Trilha_Python/Modulo_1/1. setup_e_git_github/: GIT_GITHUB.md
Espaço_Estudos/Trilha_Python/Modulo_1/3. Iniciando_em_Dicionarios/aula_04/: desafio_aula04.py
Espaço_Estudos/Trilha_Python/Modulo_1/4. Desafio_Módulo1/aula_06_(Revisão)/: Estudei_isso.md
Espaço_Estudos/Trilha_Python/Módulo_2/Funções_Estruturas_de_Dados/Desafio_Aula/: README.md  data.parquet  data_calculada.csv  etl.py  etl_antigo.py  pipeline.py  pipeline_antigo.py
Espaço_Estudos/Trilha_Python/Módulo_2/Funções_Estruturas_de_Dados/Desafio_Aula/data/: data.parquet
Espaço_Estudos/Trilha_Python/Módulo_2/Funções_Estruturas_de_Dados/Log_nos_Dados/Decoradores/: decoradores.py  utils_log.py
Espaço_Estudos/Trilha_Python/Módulo_2/Funções_Estruturas_de_Dados/Log_nos_Dados/logs/: exemplo_00.py  exemplo_01.py  exemplo_02.py  exemplo_03.py  tipos_log.py
src/estudos_python/aula_02/: Exercicios.ipynb
src/estudos_python/aula_03/: desafio.py
src/estudos_python/aula_04/: carregar_arquivo.py  debug.py  exemplo.csv  exercicios.ipynb  exercicios_dicionarios_python_50.ipynb  funções.py
