[project]
name = "estudos-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan Ruiz",email = "alanruiz.eng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.pyrefly]
search_path = [
    "Espaço_Estudos/Trilha_Python/Módulo_2/Funções_Estruturas_de_Dados/Desafio_Aula",
    "Espaço_Estudos/Trilha_Python/Módulo_2/Funções_Estruturas_de_Dados/Log_nos_Dados/Decoradores"
]

[tool.poetry]
package-mode = false